--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -16,6 +16,23 @@
   align-items: center;
 }
 
+.localeContainer {
+  display: flex;
+  flex-direction: row;
+}
+
+.locale {
+  display: flex;
+  width: 60px;
+  height: 60px;
+  padding: 5px;
+  border: 1px solid black;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  margin-right: 5px;
+}
+
 .footer {
   width: 100%;
   height: 100px;
